<resources>
    <string name="app_name">Zeroway</string>
    <string name="naver_client_id">ODCesVjj97DnhN6xYmMM</string>
    <string name="naver_client_secret">hMZKi5w0_Y</string>

    <string name="false_id_check">중복된 닉네임입니다.</string>
    <string name="true_id_check">사용 가능한 닉네임입니다.</string>
    <string name="before_id_check">중복확인</string>
    <string name="after_id_check">등록하기</string>

    <string name="popularity">인기순</string>
    <string name="latest">최신순</string>
    <string name="like">좋아요</string>
    <string name="challenge">챌린지</string>
    <string name="review">리뷰</string>
    <string name="report">신고</string>
    <string name="delete">삭제</string>
    <string name="write_post">게시물 작성</string>
    <string name="confirm">확인</string>
    <string name="community">커뮤니티</string>
    <string name="challenge_confirm">챌린지 인증</string>
    <string name="comment">댓글</string>
    <string name="detail">더보기</string>
    <string name="store_exception">제공되지 않는 정보입니다.</string>
    <string name="store">제로웨이스트 샵</string>
    <string name="report_option_1">욕설/비하</string>
    <string name="report_option_2">음란물/불건전한 만남 및 대화</string>
    <string name="report_option_3">유출/사칭/사기</string>
    <string name="report_option_4">상업적 광고 및 판매</string>
    <string name="report_option_5">낚시/도배</string>
</resources>